it is the begin

--- a/workspace/js/modules/common/form/form.scss
+++ b/workspace/js/modules/common/form/form.scss
@@ -12,12 +12,26 @@
       &:focus {
         border-width: 1px;
       }
-      @include placeholder(#ccc)
+      @include placeholder(#ccc);
+      &.textarea {
+        resize: none;
+        &::-webkit-scrollbar-track {
+          -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+          background-color: rgba(0, 0, 0, 0.4);
+        }
+        &::-webkit-scrollbar {
+          width: 4px;
+          background-color: transparent;
+        }
+        &::-webkit-scrollbar-thumb {
+          border-radius: 4px;
+          background-color: rgba(255, 255, 255, 0.7);;
+        }
+      }
     }
     &.has-error .form-control {
       border: 1px solid $brand-danger;
     }
-
   }
   .checkbox-wrapper {
     margin-bottom: 15px;
@@ -101,6 +115,39 @@
     &.has-error .Select-control {
       border: 1px solid $brand-danger;
       //@include box-shadow(inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(red($brand-danger), green($brand-danger), blue($brand-danger), .6));
+    }
+  }
+  .datetime-wrapper{
+    div.date{
+      width: 100%;
+      margin-bottom: 15px;
+      >div{
+        width: 100%;
+        input{
+          outline: none;
+          width: 100%;
+          border-radius: 5px;
+          border: none;
+          color: #fff;
+          height: 34px;
+          padding: 0 12px;
+          background: rgba(0, 0, 0, 0.4);
+          @include transition(border-color ease-in-out 0.15s);
+          @include transition(box-shadow ease-in-out 0.15s);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+          @include placeholder(#ccc);
+          &:focus{
+            border: 1px solid $input-border-focus;
+            @include box-shadow(inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(red($input-border-focus), green($input-border-focus), blue($input-border-focus), .6));
+          }
+        }
+      }
+    }
+    &.has-error  div.date {
+      input {
+        border: 1px solid $brand-danger;
+        @include box-shadow(inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(red($brand-danger), green($brand-danger), blue($brand-danger), .6));
+      }
     }
   }
   .form-group, .checkbox-wrapper, .radio-wrapper, .select-wrapper {
@@ -199,6 +246,16 @@
         position: absolute;
       }
     }
+    .form-group {
+      .textarea-first-wrapper {
+        display: inline-block;
+        height: 22px;
+        .form-control.textarea {
+          min-width: 200px;
+          line-height: 22px;
+        }
+      }
+    }
     .select-wrapper {
       .select-first-wrapper {
         height: 34px;
@@ -231,6 +288,11 @@
       position: relative;
       .error-block {
         position: absolute;
+      }
+      @media (min-width: $screen-sm-min) {
+        .form-control.textarea {
+          line-height: 22px;
+        }
       }
     }
   }
